feat: menu: Add Menu to Layout

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="auto">
+<html lang="auto" class="dark">
 	<head>
 		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 		%sveltekit.head%
